2005-08-26  Yves Combe,,,  <yves@ycombe.net>

	add several functions for directory management.
	create user from system data if no user to log (system encoding?).
	
	* src/boards/py-gcompris-user.c: (pyGcomprisUserType_getattr):
	* src/boards/py-mod-gcompris.c: (pyGcomprisTextCallback),
	(py_gcompris_get_user_dirname), (py_gcompris_get_board_dirname),
	(py_gcompris_get_current_user_dirname),
	(py_gcompris_get_current_board_dirname):
	* src/boards/python/pythontest.py:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris.c: (setup_window):
	* src/gcompris/gcompris.h:
	* src/gcompris/gcompris_files.c: (gcompris_get_user_dirname),
	(gcompris_get_current_user_dirname), (gcompris_get_board_dirname),
	(gcompris_get_current_board_dirname):
	* src/gcompris/gcompris_files.h:
	* src/gcompris/profile.c: (gcompris_set_current_user):
	* src/gcompris/profile.h:
	* src/gcompris/properties.c:
	* src/gcompris/properties.h:

2005-08-25  bruno coudoin

	* boards/sudoku.xml.in: typos (thanks to Gabor Kelemen)
	* src/boards/python/sudoku.py: After gcompris team review, fixed
	several bugs, added support for drop over previous symbol
	added current sublevel number display
	
2005-08-25  Yves Combe,,,  <yves@ycombe.net>

	Fix (hope it's fixed) strange locale bug with shapegame. Bar buttons actions like Help and About were passed non translated when go in/out shapegame. 

	* src/gcompris/gcompris.c: (gcompris_set_locale):

2005-08-25  Yves Combe,,,  <yves@ycombe.net>

	divide gcompris user's files into .gcompris/shared and ./gcompris/users
	mv db default name to .gcompris/shared/profils/gcompris_sqlite.db
	add commend line options with all that.

	* po/Makefile.in.in:
	* src/gcompris/gcompris.c: (gcompris_init):
	* src/gcompris/properties.c: (get_default_database_name),
	(gcompris_properties_new):
	* src/gcompris/properties.h:

2005-08-24  bruno coudoin

	* boards/fifteen.xml.in: Changed the difficulty from 1 to 5
	* boards/sudoku.xml.in: updated help