@@ -1,5 +1,12 @@
 2005-08-26  Yves Combe,,,  <yves@ycombe.net>
 
+	patch by Joe Neeman.
+	This patch fixes some issues with Troggle difficulty and fixes translation problems. 
+
+	* src/boards/python/gnumch.py:
+
+2005-08-26  Yves Combe,,,  <yves@ycombe.net>
+
 	add several functions for directory management.
 	create user from system data if no user to log (system encoding?).
 	
